# data_france

./: .gitignore  CHANGELOG.md  Pipfile  README.md  README.rst  django_settings.py  dodo.py  manage.py  pyproject.toml  setup.cfg  sources.yml
backend/: backend.py  sources.py  utils.py
backend/data_preparation/elections/: europeennes_2014.py  scrutins_2014.py  scrutins_2017.py  scrutins_2017_2019.py
backend/tasks/: __init__.py  admin_express.py  annuaire_administratif.py  assemblee_nationale.py  cartographie.py  cog.py  consulaires.py  final_data.py  parrainages.py  rne.py
backend/tasks/elections/: __init__.py  referendum2005.py  scrutins_2014.py  scrutins_2017_2019.py  scrutins_2017_2020.py  utils.py
backend/tasks/final_data/: __init__.py  cantons.csv  circonscriptions_consulaires.csv  circonscriptions_legislatives.csv  codes_postaux.csv  collectivites_departementales.csv  collectivites_regionales.csv  communes.csv  departements.csv  deputes.csv  deputes_europeens.csv  elus_departementaux.csv  elus_regionaux.csv  epci.csv  regions.csv
backend/tasks/rne/: __init__.py  corrections_siren_epci.csv
data_france/: __init__.py  admin.py  apps.py  forms.py  models.py  search.py  type_noms.py  typologies.py  urls.py  utils.py  views.py
data_france/admin/: __init__.py  utils.py
data_france/data/: __init__.py  ctu.csv
data_france/management/commands/: update_data_france.py
data_france/migrations/: 0001_initial.py  0002_importer_communes_epci.py  0003_importation_des_geometries.py  0004_auto_20200327_0531.py  0005_auto_20200330_0827.py  0006_search.py  0007_ajout_departements_regions.py  0008_ajouts_verbose_names.py  0009_codes_postaux.py  0010_ameliore_recherche.py  0011_auto_20200416_0413.py  0012_collectivites_departementales_et_regionales.py  0013_cantons.py  0014_elumunicipal.py  0015_recherche_elus_municipaux.py  0016_auto_20210122_1031.py  0017_mairies.py  0018_elus_epci.py  0019_auto_20210209_0834.py  0020_elumunicipal_parrainage2017.py  0021_circonscriptionconsulaire.py  0022_auto_20210528_0804.py  0023_auto_20210706_0953.py  0024_circonscriptionlegislative_depute.py  0025_auto_20210707_0901.py  0026_auto_20210715_0451.py  0027_eludepartemental.py  0028_eluregional.py  0029_deputes_europeens.py  0030_indexs_recherche_elus.py  0031_cantons_geometries.py  0032_ajouts_csp.py  0033_circonscriptionconsulaire_pays.py  0034_depute_actif_deputeeuropeen_actif_and_more.py  0035_changer_lien_conseiller_regionaux.py  0036_circonscriptionconsulaire_circonscription_legislative.py  0037_alter_deputeeuropeen_options.py
test/: django_settings.py  test_admin.py  test_models.py  test_runner.py  test_views.py  urls.py
