[tool.poetry]
name = "data-france"
version = "0.15.0a3"
description = "Paquet agrégeant des données administratives publiques pour en rendre l'utilisation facile."
authors = [
  "Salomé Cheysson <salome@cheysson.fr>",
  "Jill Royer <perso@jillroyer.me>"
]
license = "GNU-GPL 3.0"

packages = [
  { include = "data_france" },
]
include = [
    { path = "data_france/data/*.csv.lzma", format = ["sdist", "wheel"] }
]

readme = "README.rst"
homepage = "https://github.com/aktiur/data-france"

classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^4.2"
django-countries = ">=7.3.1"
psycopg2 = ">=2.9.5"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
dotenv = "^0.9.9"
doit = "^0.36.0"  # task runner
PyYAML = "^6.0"  # read YAML configuration
toml = "^0.10.2"  # read TOML configuration
pandas = "^2.2.3"  # dataframe library
pyarrow = "^15.0.2"  # read and write feather files
xlrd = "^2.0.1"  # read old excel .xls format
fiona = "^1.8.21"  # open shapefiles
lxml = "^4.9.1"  # open xml files
beautifulsoup4 = "^4.11.1"  # parse html
shapely = "^2.0.2"  # manipulates geometries
requests = "^2.28.1"  # download
glom = "^23.1.1"  # express data transformations
patool="^2.1.1"  # unpack archive

# developing and testing
black = "^23.1.0"  # formatting source code
django-types = "^0.16.0"
ipython = "*"
python-dotenv = "^0.21.1"
dj-database-url = "^1.0.0"
py7zr = "^0.22.0"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
include = ["backend", "data_france"]
exclude = ["**/__pycache__"]

executionEnvironments = [
  { root = "backend" },
  { root = "."}
]