[metadata]
name = data-france
version = 0.1
description = Une application Django comportant données administratives et géographiques sur la France
long_description = file: README.rst
url = https://github.com/aktiur/data-france
author = Arthur Cheysson
author_email = arthur@cheysson.fr
license = GPLv3+
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
package_dir =
    =src
include_package_data = true
packages = find:

[options.packages.find]
where=src
